# mlearn

./: README.md  base.py  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  pypi_publish.yml  pytest.yml  python-package.yml
metrics/: classification.py  regression.py
micromlkit/: __init__.py  base.py
micromlkit/cluster/: __init__.py  _distance.py  agglomerative.py  dbscan.py  kmeans.py
micromlkit/decomposition/: __init__.py  pca.py
micromlkit/ensemble/: __init__.py  gradient_boosting.py  random_forest.py
micromlkit/linear_model/: __init__.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
micromlkit/metrics/: __init__.py  classification.py
micromlkit/model_selection/: __init__.py  cross_validation.py  search.py
micromlkit/neighbors/: __init__.py  knn_classifier.py  knn_regressor.py
micromlkit/pipeline/: __init__.py  pipeline.py
micromlkit/preprocessing/: __init__.py  encoder.py  imputer.py  scaler.py
micromlkit/svm/: __init__.py  svm.py
micromlkit/tree/: __init__.py  decision_tree_classifier.py  decision_tree_regressor.py
micromlkit/utils/: __init__.py  math.py  validation.py
model_selection/: search.py  split.py
src/: base.py
src/linear_model/: linear_regression.py
src/metrics/: classification.py
tests/: test_base.py  test_cluster.py  test_decomposition.py  test_ensemble.py  test_linear_models_extra.py  test_linear_regression.py  test_metrics.py  test_model_selection.py  test_neighbors.py  test_pipeline.py  test_preprocessing.py  test_svm.py  test_tree.py  test_utils.py
(+1 files in other folders)
