[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromlkit"
version = "0.1.6"
description = "Mini machine learning library"
authors = [{ name = "Probal Deep Saikia", email="probaldeepsaikia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[tool.setuptools.packages.find]
include = ["micromlkit", "micromlkit.*"]
exclude = ["build*", "tests*"]
